examples/fail/semantic/type_as_value.bina
// EXPECT_SEMANTIC_ERROR: type 'Point' cannot be used as a value
struct Point {
    x: int32;
}

fn main() -> int {
    let x = Point;
    return 0;
}
